2005-08-15 09:28 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringArea) to speed up execution... compute, store,
	and always reply with result from first invocation.

2005-08-13 14:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) use
	ringSurroundsTriangle instead of area check.
	* src/gridinsert.c (gridFillRingWithExisitingCellFaces) use
	ringSurroundsTriangle instead of area check.

2005-08-13 13:58 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSurroundsTriangle) reject triangle that pierces
	ring.

2005-08-12 16:06 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringArea) compute total area of the ring.
	* src/ring.c (ringSurroundsTriangle) accept triangle if area is the
	same sign as ring total area.

2005-08-12 12:55 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSurroundsTriangle) added to test if a triangle
	is acceptable to add in order to eventually complete ring.

2005-08-12 12:40 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringIntersectsSegment) handels parallel segments
	correctly.

2005-08-12 10:42 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringIntersectsSegment) renamed from ringSurroundsSegment.

2005-08-12 10:10 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSurroundsSegment) also tests intersections.

2005-08-12  8:48 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSurroundsSegment) tests existing segments for being
	topologically correct by node id.

2005-08-11 14:06 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) store original segments when first
	triangle is added.
	* src/ring.c (ringTecplot) dump original segments.

2005-08-11 10:27 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringTecplot) dump segments, triangles, node ids.

2005-08-10 16:52 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringTecplot) dump triangles to tecplot in uv.

2005-08-10 16:28 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) reuse nodes if