@@ -206,6 +206,7 @@ Grid *gridWriteTecplotComment(Grid *g, char *comment );
 Grid *gridWriteTecplotCellGeom(Grid *g, int *nodes, double *scalar,
 			       char *filename );
 Grid *gridWriteTecplotEquator(Grid *g, int n0, int n1, char *filename );
+Grid *gridWriteTecplotEquatorFaces(Grid *g, int n0, int n1, char *filename );
 Grid *gridCloseTecplotGeomFile(Grid *g);
 /* Warning, call gridSortNodeGridEx before calculating scalar 
  * in gridWriteTecplotSurfaceScalar to avoid a renumbering bug. */
